config/manifests/deployment-webhook.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Project Persephone contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: persephone-webhook
  namespace: garden
  labels:
    app: persephone
    role: webhook
  annotations:
    secret.reloader.stakater.com/reload: "persephone-config-webhook"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: persephone
      role: webhook
  template:
    metadata:
      labels:
        app: persephone
        role: webhook
        networking.gardener.cloud/to-runtime-apiserver: allowed
        networking.gardener.cloud/to-dns: allowed
        networking.gardener.cloud/to-public-networks: allowed
        networking.resources.gardener.cloud/to-virtual-garden-kube-apiserver-tcp-443: allowed
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: persephone
                  role: webhook
              topologyKey: kubernetes.io/hostname
      containers:
        - name: persephone-webhook
          command: ["/usr/bin/persephone-webhook"]
          args:
            - -config=/tmp/config/config.yaml
            - -metrics-bind-address=:8080
          image: persephone-webhook:latest
          volumeMounts:
            - mountPath: /tmp/config
              name: config
              readOnly: true
            - name: kubeconfig
              mountPath: "/var/run/secrets/kubernetes.io/serviceaccount"
          ports:
            - containerPort: 9443
              name: webhook
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
      volumes:
        - name: config
          secret:
            secretName: persephone-config-webhook
        - name: kubeconfig
          secret:
            items:
            - key: token
              path: token
            - key: bundle.crt
              path: ca.crt
            secretName: persephone-webhook-token
